--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": ".eslintrc.js",
   "dependencies": {
+    "package.json": "^2.0.1",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
-    "@types/vue": "^2.0.0"
+    "@types/vue": "^2.0.0",
+    "http-server": "^0.11.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
